<resources>
    <string name="app_name">dummylogreg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="clicktologin">click to login</string>
    <string name="clicktoregister">click to register</string>
</resources>